test/fail/generated/test_AvgPool3d_stride_pad_gpu_general_output/model.pb
pytorch0.3:¤
Í
01"AveragePool*
kernel_shape@@@ *
pads@@@ *
strides@@@ 2ù/home/lufang/gitrepos/onnx-fb-universe/repos/pytorch/torch/nn/modules/pooling.py(654): forward
/home/lufang/gitrepos/onnx-fb-universe/repos/pytorch/torch/nn/modules/module.py(325): __call__
/home/lufang/gitrepos/onnx-fb-universe/repos/pytorch/torch/jit/__init__.py(245): forward
/home/lufang/gitrepos/onnx-fb-universe/repos/pytorch/torch/nn/modules/module.py(325): __call__
/home/lufang/gitrepos/onnx-fb-universe/repos/pytorch/torch/jit/__init__.py(227): trace
/home/lufang/gitrepos/onnx-fb-universe/repos/pytorch/torch/onnx/__init__.py(120): _export
convert_pytorch_test.py(69): convert_tests
convert_pytorch_test.py(102): <module>
torch-jit-exportZ
0





b
1





B